@@ -24,6 +24,9 @@ Release 0.20.205.1 - unreleased
     HADOOP-6886. LocalFileSystem Needs createNonRecursive API.
     (Nicolas Spiegelberg via jitendra)
 
+    HADOOP-5124. A few optimizations to FsNamesystem#RecentInvalidateSets.
+    (Hairong Kuang via jitendra)
+
   BUG FIXES
 
     HADOOP-7784. Fixed jsvc packaging. (Eric Yang)
